# crust

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  RESPONSES.md  daemon.c  main.c  messaging.c  messaging.h  node.c  options.h  state.c  state.h  terminal.c  terminal.h  watcher.c  watcher.h
src/: CMakeLists.txt  client.c  client.h  config.c  config.h  connectivity.c  connectivity.h  daemon.c  daemon.h  main.c  messaging.c  messaging.h  node.c  node.h  options.h  state.c  state.h  terminal.c  terminal.h  window.c  window.h
tools/: BroadwayShape.txt  broadwayConfig.yml  broadwayInit.txt  broadwayLayout.txt  broadwayShape.txt  broadwayWalk.py  convertShapeToLayout.py  enableTestGPIO.sh  gwsrInit.txt  gwsrLayout.txt  gwsrShape.txt  insertLotsOfBlocks.php  lipsum.h  quickWrite.py  simpleLoopInit.txt  simpleLoopLayout.txt  simpleStraightInit.txt  simpleStraightLayout.txt  simpleStraightShape.txt  simpleStraightSpeedupTest.py  slowReadTest.php
